# syspatch-feed

./: .gitignore  Cargo.toml  DOM Example.txt  README.md  wrangler.toml
src/: atom_entry.rs  date_index.rs  html.rs  html_util.rs  lib.rs  main.rs  traverse.rs  traverse_dom.rs
