[package]
name = "syspatch_feed"
version = "0.1.0"
authors = ["Albert Gomà i León"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
#default = ["console_error_panic_hook"]

[dependencies]
worker = "0.0.12"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
chrono = "0.4.23"
#futures = "0.3.25"
regex = {version = "1.7.0", features = ["std", "perf-literal", "unicode", "unicode-bool", "unicode-gencat"]}


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
#console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
