[package]
name = "syspatch_feed"
version = "0.1.0"
authors = ["Albert Gomà i León"]
edition = "2021"

[dependencies]
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
chrono = "0.4.23"
regex = { version = "1.7.0", features = ["std", "perf-literal", "unicode", "unicode-bool", "unicode-gencat"] }
base64 = "0.21.0"
html-escape = "0.2.12"
sha = "1.0.3"
reqwest = "0.11.13"
tokio = { version = "1.23.0", features = ["full"] }
serde_json = "1.0.91"
bytes = "1.3.0"

[net]
git-fetch-with-cli = true #CVE-2022-46176
